# mono

./: .gitignore  README.org  flake.nix  spade-package.nix
accel-lean/: Main.lean  lakefile.lean
agda/: .agda-lib  axler.agda  axler.agdai  hello  hello.agda  hello.agdai
agda/MAlonzo/: RTE.hi
annas-archive-downloader/: download-from-annas-archive  download.py  search.py
autodiff/: CHANGELOG.md  autodiff.cabal  package.yaml
autodiff/src/: Lib.hs
book-formalizations/: taocp.lean
conc/src/: main.rs
dep/: LICENSE-MIT  README.md  info.rkt  itt-coc.ts  kanren.rkt  main.rkt
dep/ITT-Flavored Calculus of Constructions Type Checker · GitHub_files/: behaviors-1ad763fd7e6d.js  gist-2610fd92af52.js  gist-2c179e7509a8.css  global-ae9657ca0ac3.css  keyboard-shortcuts-dialog-7899225ce772.js  primer-fb122a21966c.css  react-lib-1fbfc5be2c18.js  vendors-node_modules_github_clipboard-copy-element_dist_index.js  wp-runtime-bfb3f274d31d.js  (+1 more)
ein/: Cargo.toml  notes.org
ein/src/: main.rs
fpgalogic/: main.py
lean-autodiff/: Main.lean  ad.lean  algo.lean  ieee754.lean  lakefile.lean  lakefile.olean
lean-haskell-wikibook/: Main.lean  lakefile.lean
lean-relational/: Main.lean  lake-manifest.json  lakefile.lean  readme.org  relational.lean  substitution-data-structure.org
nix/: einx.nix
racket-dep/: LICENSE-APACHE  LICENSE-MIT  README.md  info.rkt  main.rkt
relational-rs/: Cargo.toml
remove-brainworms/: manifest.json  options.html  readme.org  remove-brainworms.js
sim/: Cargo.toml  map.gnuplot  sim.k
sim/src/: lib.rs  main.rs
time/: Cargo.toml
(+37 files in other folders)
